--- a/Chart.yaml
+++ b/Chart.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 description: A Helm chart for Papertrail
 name: papertrail
 version: 0.1.0
+home: https://papertrailapp.com/
+icon: https://papertrail.global.ssl.fastly.net/images/pt-logo.svg
